# Spike

./: .#TODO-Toby.org  ._catch.hpp  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CUDAcode.cu  CUDAcode.h  ConductanceExperiment1  ConductanceExperiment1.cpp  Connections.cpp  Connections.cu  Connections.h  Constants.h  Doxyfile  Example.cpp  ExampleIzhikevich  ExampleIzhikevich.cpp  ExampleLIF  ExampleLIF.cpp  GeneratorSpikingNeurons.cu  GeneratorSpikingNeurons.h  Inputs.cu  Inputs.h  Install.txt  IzhikevichNeurons.cu  IzhikevichNeurons.h  IzhikevichSpikingNeurons.cu  IzhikevichSpikingNeurons.h  LICENSE  LIFExperiment1  LIFExperiment1.cpp  Makefile  ModelNeurons.cpp  ModelNeurons.h  Neuron.cpp  Neuron.h  NeuronDynamics.cu  NeuronDynamics.h  (+178 more)
Examples/: AkiNet.cpp  Brunel10K.cpp  CMakeLists.txt  CPUTest.cpp  CollectEventsNetworkExperiment.hpp  ExampleExperiment.cpp  IzhikevichExperiment1.cpp  JITest.cpp  NetworkExperiment.cu  SimpleExample.cpp  TSCSOptimiseFourLayerVisionSpikingModelFiringRates.cpp  TestTrainTestExperimentSet.hpp  TrainNetworkExperiment.cu  UtilityFunctions.hpp  VogelsAbbotNet.cpp  VogelsAbbottNet.cpp
Experiments/: CMakeLists.txt  CPUTest.cpp  CollectEventsNetworkExperiment.cu  CollectEventsNetworkExperiment.h  ConductanceExperiment1  ConductanceExperiment1.cpp  ConductanceExperiment1.cpp.orig  ExampleExperiment.cpp  ExampleIzhikevich.cpp  IzhikevichExperiment1.cpp  JITest.cpp  NetworkExperiment.cu  NetworkExperiment.h  OptimiseFourLayerVisionSpikingModelFiringRates.cpp  TestFourLayerVisionSpikingModelFiringRates.cpp  TestNetworkExperiment.cu  TestNetworkExperiment.h  TestTrainTestExperimentSet.cu  TestTrainTestExperimentSet.h  TestTrainTestFourLayerVisionSpikingModelFiringRates.cpp  TrainNetworkExperiment.cu  TrainNetworkExperiment.h  VogelsAbbotNet.cpp
Experiments/Old/: ConductanceExperiment1.cpp  NetworkExperiment.h
Experiments/OptimalParameters/: ._optimal_parameters_from_optimisation_iteration_2.txt  optimal_parameters_from_optimisation_iteration_0.txt  optimal_parameters_from_optimisation_iteration_1.txt  optimal_parameters_from_optimisation_iteration_2.txt  optimal_parameters_from_optimisation_iteration_3.txt
Experiments/binaries/: .gitignore
Spike/: Base.hpp  CMakeLists.txt  Spike.hpp
Spike/ActivityMonitor/: ActivityMonitor.cpp  ActivityMonitor.hpp  RateActivityMonitor.cpp  RateActivityMonitor.hpp  SpikingActivityMonitor.cpp  SpikingActivityMonitor.hpp
Spike/Backend/: Backend.hpp  Base.hpp  CMakeLists.txt  CUDA_Hacks.hpp  Context.cpp  Context.hpp  Device.hpp  Macros.hpp  Memory.cpp  Memory.hpp
Spike/Helpers/: CMakeLists.txt  FstreamWrapper.cpp  Memory.cpp  Memory.hpp  MemoryUsage.h  MemoryUsage.hpp  RandomStateManager.cpp  RandomStateManager.h  RandomStateManager.hpp  TerminalHelpers.hpp  TimerWithMessages.cpp  TimerWithMessages.h  TimerWithMessages.hpp  Utilities.h
Spike/Models/: CMakeLists.txt  FourLayerVisionSpikingModel.cpp  FourLayerVisionSpikingModel.hpp  SpikingModel.cpp  SpikingModel.cu  SpikingModel.hpp
Spike/Monitors/: CountNeuronSpikesRecordingElectrodes.cpp  Monitors.cpp  Monitors.hpp  RateMonitors.cpp  RateMonitors.hpp  SpikeMonitors.cpp  SpikeMonitors.hpp
Spike/Neurons/: AdExSpikingNeurons.cpp  AdExSpikingNeurons.h  AdExSpikingNeurons.hpp  CMakeLists.txt  GeneralPoissonInputSpikingNeurons.cpp  GeneralPoissonInputSpikingNeurons.hpp  GeneratorInputSpikingNeurons.cpp  GeneratorInputSpikingNeurons.cu  GeneratorInputSpikingNeurons.hpp  ImagePoissonInputSpikingNeurons.cpp  ImagePoissonInputSpikingNeurons.hpp  InputSpikingNeurons.cpp  InputSpikingNeurons.hpp  IzhikevichSpikingNeurons.cpp  IzhikevichSpikingNeurons.h  IzhikevichSpikingNeurons.hpp  LIFSpikingNeurons.cpp  LIFSpikingNeurons.h  LIFSpikingNeurons.hpp  Neurons.cpp  Neurons.h  Neurons.hpp  PatternedPoissonInputSpikingNeurons.cpp  PatternedPoissonInputSpikingNeurons.hpp  PoissonInputSpikingNeurons.cpp  PoissonInputSpikingNeurons.h  PoissonInputSpikingNeurons.hpp  SpikingNeurons.cpp  SpikingNeurons.h  SpikingNeurons.hpp
Spike/Optimiser/: CMakeLists.txt  Optimiser.cpp  Optimiser.h  Optimiser.hpp
Spike/Plasticity/: CMakeLists.txt  CustomSTDPPlasticity.cpp  CustomSTDPPlasticity.hpp  EvansSTDPPlasticity.cpp  EvansSTDPPlasticity.hpp  HigginsSTDP.cpp  InhibitorySTDPPlasticity.cpp  InhibitorySTDPPlasticity.hpp  MasquelierSTDP.hpp  MasquelierSTDPPlasticity.cpp  MasquelierSTDPPlasticity.hpp  Plasticity.cpp  Plasticity.hpp  STDPPlasticity.cpp  STDPPlasticity.hpp  SpikingWeightNormPlasticity.cpp  SpikingWeightNormPlasticity.hpp  VogelsSTDP.hpp  VogelsSTDPPlasticity.cpp  VogelsSTDPPlasticity.hpp  WeightDependentSTDPPlasticity.cpp  WeightDependentSTDPPlasticity.hpp  WeightNormSTDPPlasticity.cpp  WeightNormSTDPPlasticity.hpp  WeightNormSpikingPlasticity.cpp  WeightNormSpikingPlasticity.hpp  vanRossumSTDP.cpp  vanRossumSTDPPlasticity.cpp  vanRossumSTDPPlasticity.hpp
Spike/Plotting/: CMakeLists.txt  Plotter.cpp  Plotter.hpp
Spike/RecordingElectrodes/: CMakeLists.txt  CollectNeuronSpikesRecordingElectrodes.cpp  CollectNeuronSpikesRecordingElectrodes.hpp  CountNeuronSpikesRecordingElectrodes.cpp  CountNeuronSpikesRecordingElectrodes.hpp  NetworkStateArchiveRecordingElectrodes.cpp  NetworkStateArchiveRecordingElectrodes.hpp  RecordingElectrodes.cpp  RecordingElectrodes.h  RecordingElectrodes.hpp
Spike/STDP/: CMakeLists.txt  EvansSTDP.cpp  EvansSTDP.h  EvansSTDP.hpp  HigginsSTDP.cpp  HigginsSTDP.h  HigginsSTDP.hpp  MasquelierSTDP.cpp  MasquelierSTDP.hpp  STDP.cpp  STDP.h  STDP.hpp  VogelsSTDP.cpp  VogelsSTDP.hpp  vanRossumSTDP.cpp  vanRossumSTDP.hpp
Spike/Simulator/: CMakeLists.txt  Simulator.cpp  Simulator.h  Simulator.hpp
Spike/SpikeAnalyser/: CMakeLists.txt  SpikeAnalyser.cpp  SpikeAnalyser.cu  SpikeAnalyser.h  SpikeAnalyser.hpp
Spike/Synapses/: CMakeLists.txt  (+13 more)
Tests/: CMakeLists.txt  TestMain.cpp  TestMain.cu  Test_Helpers.cpp  Test_Helpers.cu  Test_Neurons.cpp  Test_Neurons.cu  Test_RecordingElectrode.cpp  Test_RecordingElectrode.cu  Test_STDP.cpp  Test_STDP.cu  Test_Simulator.cpp  Test_Simulator.cu  Test_SpikeAnalyser.cu  Test_Synapses.cpp  Test_Synapses.cu
(+1566 files in other folders)
