add_library (Neurons OBJECT
  Neurons.cpp
  SpikingNeurons.cpp
  InputSpikingNeurons.cpp
  GeneratorInputSpikingNeurons.cpp
  PoissonInputSpikingNeurons.cpp
  GeneralPoissonInputSpikingNeurons.cpp
  ImagePoissonInputSpikingNeurons.cpp
  LIFSpikingNeurons.cpp
  AdExSpikingNeurons.cpp
  IzhikevichSpikingNeurons.cpp
  )
